View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024132 | Open CASCADE | OCCT:DRAW | public | 2013-08-27 22:07 | 2013-12-19 13:57 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024132: Test execution fails due to permission rights issues | ||||
Description | Current implementation of capture_start() has 2 issues - tmpfile() return values is ignored and this function is irrelevant on modern systems according to MSDN documentation because temporary file is created in root directory of current drive. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
The initial patch has been pushed into CR24132 branch. However current _tempnam() implementation seems to be very trivial (using of internal counter) and may lead to file open failure on concurrent calls. |
|
I have improved the patch by adding: PID to name prefix, path to directory indicated by env. var. TEMP as location where file can be created, removing temp files, handling of possible errors. Please review |
|
Patch has been reviewed with minor remark (redundant typecast (int)OSD_Process().ProcessId()). Please perform testing. |
|
Dear BugMaster, Branch CR24132 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 3ce02e668381a38e417f028c7dc81a764ae993c6 Number of compiler warnings: occt component : Linux: 781 (781 on master) Windows: 386 (386 on master) products component : Linux: 188 (191 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 365699764 / 365366360 Total CPU difference: 41765.760000000984 / 54103.98000000012 Testing on Windows: Total MEMORY difference: 428685728 / 429434700 Total CPU difference: 35087.171875 / 36525.203125 There are not differences in images found by testdiff. |
occt: master e9b037ef 2013-09-05 09:11:45 Committer: bugmaster Details Diff |
0024132: Test execution fails due to permission rights issues Generation of temporary files used for capturing DRAW command output on Windows is improved to use directory specified by environment variable TMP or TEMP (instead of root directory which can be write-protected) |
Affected Issues 0024132 |
|
mod - src/Draw/Draw_Interpretor.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-08-27 22:07 | kgv | New Issue | |
2013-08-27 22:07 | kgv | Assigned To | => kgv |
2013-08-27 22:14 | kgv | Note Added: 0025398 | |
2013-08-27 22:14 | kgv | Assigned To | kgv => abv |
2013-08-27 22:14 | kgv | Status | new => resolved |
2013-08-29 10:30 |
|
Assigned To | abv => kgv |
2013-08-29 10:31 |
|
Note Added: 0025410 | |
2013-08-29 12:00 | kgv | Note Added: 0025413 | |
2013-08-29 12:00 | kgv | Assigned To | kgv => bugmaster |
2013-08-29 12:00 | kgv | Status | resolved => reviewed |
2013-08-29 13:47 |
|
Assigned To | bugmaster => mkv |
2013-08-30 19:15 |
|
Note Added: 0025424 | |
2013-08-30 19:16 |
|
Test case number | => Not needed |
2013-08-30 19:16 |
|
Assigned To | mkv => bugmaster |
2013-08-30 19:16 |
|
Status | reviewed => tested |
2013-09-06 14:36 | bugmaster | Changeset attached | => occt master e9b037ef |
2013-09-06 14:36 | bugmaster | Status | tested => verified |
2013-09-06 14:36 | bugmaster | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:57 | bugmaster | Fixed in Version | => 6.7.0 |